--- a/exercicios/ex026mq/mq002/estilos/style.css
+++ b/exercicios/ex026mq/mq002/estilos/style.css
@@ -1,3 +1,22 @@
-@charset "UTF8";
+@charset "UTF-8";
 
 /*conf. gerais*/
+
+*{
+    margin: 0px;
+    padding: 0px;
+    font-family: Arial, Helvetica, sans-serif;
+}
+html, body{
+    width: 100vw;
+    height: 100vh;
+    background-color: #233eff;
+    background-size: contain;
+    background-repeat: no-repeat;
+
+}
+h1{
+    color: aliceblue;
+    text-shadow: 3px 3px 0px rgba(29, 29, 43, 0.815);
+    padding: 10px;
+}
