--- a/exercicios/ex026mq/mq004/estilos/media-query.css
+++ b/exercicios/ex026mq/mq004/estilos/media-query.css
@@ -2,7 +2,88 @@
 
 /* todas as demais midias*/
 
-@media print {
 
+
+/*Typical Device Breakpoint
+------------------------------
+  pequenas telas : até 600px
+  celular: de 600px até 768px
+  tablet: 768px até 992px
+  desktop: 992px até 1200px
+  telas grandes: acima 1200px
+------------------------------
+
+*/
+
+
+
+@media print { /*impressão*/
+    *{
+        font-family: monospace;
+
+    }
+    body{
+        background-image: url(../imagens/back-print.jpg);
+    }
+    main{
+        border: 2px solid;
+    }
+    main h1{
+        width: 90%;
+        color: rgb(224, 21, 21);
+       
+      
+    }
+    main::after{
+        content: 'Essa impressão foi feita atrvés do site..';
+        text-decoration: underline;
+    }
+    img#phone{display: none;}
+    img#tablet{ display: none;}
+    img#print{ display: block; }
+    img#pc{display: none;}
+    img#tv{ display: none;}
+    
+    
+}
+    
+@media screen and (min-width: 768px) and (max-width: 992px) {/*tablet*/
+    body{
+        background-image: url(../imagens/back-tablet.jpg);
+    }
+
+    img#phone{display: none;}
+    img#tablet{ display: block;}
+    img#print{ display: none; }
+    img#pc{display: none;}
+    img#tv{ display: none;}
+    
+}
+
+@media screen and (min-width: 992px) and (max-width: 1200px) {/*desktop*/
+    body{
+        background-image: url(../imagens/back-pc.jpg);
+    }
+    img#phone{display: none;}
+    img#tablet{ display: none;}
+    img#print{ display: none; }
+    img#pc{display: block;}
+    img#tv{ display: none;}
+    
+    
+    
+}
+@media screen and (min-width: 1200px) { /*Grandes tela*/
+    body{
+        background-image: url(../imagens/back-tv.jpg);
+    }
+   
+    
+    img#phone{display: none;}
+    img#tablet{ display: none;}
+    img#print{ display: none; }
+    img#pc{display: none;}
+    img#tv{ display: block;}
+    
     
 }
